--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name voodoo_lib)
- (public_name voodoo_lib)
+ (public_name voodoo-lib)
  (preprocess
   (pps ppx_sexp_conv))
  (libraries astring sexplib fpath bos opam-format))
