--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name voodoo_lib)
  (public_name voodoo-lib)
- (libraries astring sexplib fpath bos opam-format))
+ (libraries astring fpath bos opam-format))
