--- a/gen/dune
+++ b/gen/dune
@@ -3,4 +3,6 @@
  (public_name voodoo-do.odoc_thtml)
  (instrumentation
   (backend bisect_ppx))
- (libraries odoc.model odoc.document odoc.odoc tyxml))
+ (preprocess
+  (pps tyxml-ppx))
+ (libraries odoc.model odoc.document odoc.odoc tyxml tyxml-ppx opam-format))
