--- a/voodoo-do.opam
+++ b/voodoo-do.opam
@@ -11,10 +11,9 @@ bug-reports: "https://github.com/jonludlam/voodoo/issues"
 depends: [
   "dune" {>= "2.8"}
   "voodoo-lib"
-  "odoc"
-  "tyxml"
   "astring"
   "cmdliner"
+  "odoc" {with-doc}
 ]
 build: [
   ["dune" "subst"] {dev}
