Revert "Revert "Tailwind""
This reverts commit b2bf2bb4dcab5b7d22403bedf9be27ee04088c04.

--- a/voodoo-do.opam
+++ b/voodoo-do.opam
@@ -11,9 +11,10 @@ bug-reports: "https://github.com/jonludlam/voodoo/issues"
 depends: [
   "dune" {>= "2.8"}
   "voodoo-lib"
+  "odoc"
+  "tyxml"
   "astring"
   "cmdliner"
-  "odoc" {with-doc}
 ]
 build: [
   ["dune" "subst"] {dev}
