--- a/client/dune
+++ b/client/dune
@@ -13,7 +13,7 @@
   (pps js_of_ocaml-ppx ppx_deriving_yojson))
  (modes js)
  (modules voodoo_client)
- (libraries js_of_ocaml js_of_ocaml-lwt js_of_ocaml-tyxml tailwind))
+ (libraries js_of_ocaml js_of_ocaml-lwt js_of_ocaml-tyxml tailwind astring))
 
 (alias
  (name default)
