--- a/voodoo-client.opam
+++ b/voodoo-client.opam
@@ -14,6 +14,7 @@ depends: [
   "js_of_ocaml-ppx"
   "js_of_ocaml-tyxml"
   "yojson"
+  "voodoo-web"
   "ppx_deriving_yojson"
   "odoc" {with-doc}
 ]
