--- a/gen/bin/dune
+++ b/gen/bin/dune
@@ -1,5 +1,5 @@
 (executable
  (name main)
  (public_name voodoo-gen)
- (package voodoo-do)
- (libraries voodoo-do.odoc_thtml cmdliner))
+ (package voodoo-gen)
+ (libraries voodoo-gen.odoc_thtml cmdliner))
