--- a/gen/dune
+++ b/gen/dune
@@ -1,6 +1,6 @@
 (library
  (name odoc_thtml)
- (public_name voodoo-do.odoc_thtml)
+ (public_name voodoo-gen.odoc_thtml)
  (libraries
   odoc.model
   odoc.document
