--- a/gen/dune
+++ b/gen/dune
@@ -18,6 +18,7 @@
   (:tailwind static/tailwind.css)
   (:extra static/extra.css)
   (:logo static/colour-logo.svg)
+  (:logo2 static/colour-transparent-icon.svg)
   (:highlight static/highlight.pack.js)
   (:voodoo_client static/voodoo_client.bc.js))
  (action
@@ -32,6 +33,9 @@
     (echo "|css}")
     (echo "let colour_logo_svg = {svg|")
     (cat %{logo})
+    (echo "|svg}")
+    (echo "let colour_transparent_icon_svg = {svg|")
+    (cat %{logo2})
     (echo "|svg}")
     (echo "let highlight_pack_js = {js|")
     (cat %{highlight})
