Fix installation setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
-_build
+# Dune generated files
+_build/
+*.install
+
+# Merlin configuring file for Vim and Emacs
+.merlin
+
+# Local OPAM switch
+_opam/
+
+# VSCode
 .vscode
+
+# Generated files
+*.mld
+compile/
+html/
+linked/
+prep/
