--- a/voodoo-client.opam
+++ b/voodoo-client.opam
@@ -13,6 +13,7 @@ depends: [
   "js_of_ocaml"
   "js_of_ocaml-ppx"
   "js_of_ocaml-tyxml"
+  "js_of_ocaml-lwt"
   "yojson"
   "voodoo-web"
   "ppx_deriving_yojson"
