--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -12,7 +12,7 @@ depends: [
   "dune" {>= "2.8"}
   "voodoo-lib"
   "voodoo-web"
-  "odoc"
+  "odoc" {>= "2.0.0"}
   "tyxml"
   "astring"
   "cmdliner"
@@ -34,3 +34,6 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/jonludlam/voodoo.git"
+pin-depends: [
+  ["odoc" "git+https://github.com/ocaml/odoc#master"]
+]
