--- a/voodoo-gen.opam.template
+++ b/voodoo-gen.opam.template
@@ -1,3 +1,3 @@
 pin-depends: [
-  ["odoc.2.0.0-beta4" "git+https://github.com/ocaml/odoc#master"]
+  ["odoc.2.0.0-beta4" "git+https://github.com/ocaml/odoc#da5986d73a66388adae1cc0f77336885d12d4ee8"]
 ]
