Update gen dependencies

--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -13,7 +13,7 @@ depends: [
   "voodoo-lib"
   "voodoo-web"
   "odoc" {>= "2.0.0"}
-  "opam-format" {>= "2.1.0~rc2"}
+  "opam-format" {>= "2.1.0~beta2"}
   "tyxml"
   "astring"
   "cmdliner"
