--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -12,6 +12,7 @@ depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08.0"}
   "omd" {>= "2.0.0~alpha2"}
+  "pandoc"
   "voodoo-lib"
   "odoc" {>= "2.1.0"}
   "opam-format" {>= "2.1.0~beta2"}
@@ -36,3 +37,6 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/jonludlam/voodoo.git"
+pin-depends: [
+  ["pandoc.dev" "git+https://github.com/tatchi/opam-pandoc-bin#main"]
+]
