use commit hash instead of branch name

--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -38,5 +38,5 @@ build: [
 ]
 dev-repo: "git+https://github.com/jonludlam/voodoo.git"
 pin-depends: [
-  ["pandoc.dev" "git+https://github.com/tatchi/opam-pandoc-bin#main"]
+  ["pandoc.dev" "git+https://github.com/tatchi/opam-pandoc-bin#5eeb415c7023323045371ad803f88365c7003b38"]
 ]
