--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -14,7 +14,7 @@ depends: [
   "omd" {= "2.0.0~alpha2"}
   "pandoc"
   "voodoo-lib"
-  "odoc" {>= "2.1.0"}
+  "odoc" {= "2.2.0"}
   "opam-format" {>= "2.1.0~beta2"}
   "tyxml"
   "astring"
