--- a/src/voodoo-prep/dune
+++ b/src/voodoo-prep/dune
@@ -1,5 +1,5 @@
 (executable
- (name prep)
+ (name main)
  (public_name voodoo.prep)
  (package voodoo)
- (libraries cmdliner fpath bos opam-format))
+ (libraries voodoo cmdliner fpath bos opam-format))
