Rename voodoo-do executable top-level module to main

--- a/src/voodoo-do/dune
+++ b/src/voodoo-do/dune
@@ -1,6 +1,5 @@
 (executable
- (name do)
+ (name main)
  (public_name voodoo-do)
- (modules do)
  (package voodoo-do)
  (libraries voodoo-lib cmdliner))
