--- a/voodoo.opam
+++ b/voodoo.opam
@@ -12,11 +12,10 @@ depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08.0"}
   "omd" {= "2.0.0~alpha2"}
-  "odoc" {>= "2.1.0" & < "2.2.0"}
+  "odoc" {>= "2.2.0"}
   "opam-format" {>= "2.1.0~beta2"}
   "cmdliner" {>= "1.1.0"}
   "pandoc"
-  "tyxml"
   "astring"
   "yojson"
   "bos"
