Simplify voodoo-prep
Add a dependency on voodoo and use the library instead of duplicated modules. Move functions that weren't in voodoo there, especially for the Opam module.

--- a/src/voodoo-prep/dune
+++ b/src/voodoo-prep/dune
@@ -1,4 +1,4 @@
 (executable
  (name main)
  (public_name voodoo-prep)
- (libraries cmdliner fpath bos opam-format))
+ (libraries voodoo cmdliner fpath bos opam-format))
