--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -11,7 +11,7 @@ bug-reports: "https://github.com/jonludlam/voodoo/issues"
 depends: [
   "dune" {>= "2.8"}
   "ocaml" {>= "4.08.0"}
-  "omd" {= "2.0.0~alpha2"}
+  "omd" {= "2.0.0~alpha3"}
   "voodoo-lib"
   "odoc" {= "2.2.0"}
   "opam-format" {>= "2.1.0~beta2"}
@@ -20,6 +20,9 @@ depends: [
   "cmdliner"
   "yojson"
   "bos"
+  "sexplib"
+  "fpath"
+  "ppx_deriving_yaml" {with-test}
 ]
 build: [
   ["dune" "subst"] {dev}
