--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -25,6 +25,7 @@ depends: [
   "fpath"
   "conf-jq" {with-test}
   "ppx_deriving_yaml" {with-test}
+  "base" {with-test}
 ]
 build: [
   ["dune" "subst"] {dev}
