--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# Dune generated files
+# Dune build directory
 _build/
-*.install
-
-# Merlin configuring file for Vim and Emacs
-.merlin
 
 # Local OPAM switch
 _opam/
-
-# VSCode
-.vscode
 
 # Generated files
 _generated/
