--- a/voodoo.opam
+++ b/voodoo.opam
@@ -22,6 +22,7 @@ depends: [
   "fpath"
   "ppx_deriving_yaml" {with-test}
   "base" {with-test}
+  "menhir" {with-test}
 ]
 build: [
   ["dune" "subst"] {dev}
