--- a/voodoo-prep.opam
+++ b/voodoo-prep.opam
@@ -14,7 +14,7 @@ depends: [
   "fpath"
   "bos"
   "opam-format"
-  "odoc" {with-doc}
+  "odoc" {= "2.1.1" with-doc}
 ]
 build: [
   ["dune" "subst"] {dev}
