--- a/voodoo-do.opam
+++ b/voodoo-do.opam
@@ -12,7 +12,7 @@ depends: [
   "dune" {>= "2.8"}
   "voodoo-lib"
   "voodoo-web"
-  "odoc" {= "2.2.0"}
+  "odoc"
   "tyxml"
   "astring"
   "cmdliner"
