--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -13,7 +13,7 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "omd" {= "2.0.0~alpha3"}
   "voodoo-lib"
-  "odoc" {>= "2.2.0"}
+  "odoc"
   "opam-format" {>= "2.1.0~beta2"}
   "tyxml"
   "astring"
