--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -40,3 +40,6 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/jonludlam/voodoo.git"
+available: [ os-distribution != "alpine" & arch != "ppc64"]
+# PPC64 fails to build with stack overflow see https://github.com/ocaml/ocaml/issues/11415
+# Alpine-3.16 doesn't have a pandoc package, however 3.17 does
