--- a/src/voodoo-gen/dune
+++ b/src/voodoo-gen/dune
@@ -1,12 +1,4 @@
 (library
  (name odoc_thtml)
  (public_name voodoo-gen.odoc_thtml)
- (libraries
-  odoc.model
-  odoc.document
-  odoc.odoc
-  omd
-  tyxml
-  opam-format
-  bos
-  yojson))
+ (libraries odoc.model odoc.document odoc.odoc omd tyxml bos yojson))
