--- a/src/voodoo-gen/dune
+++ b/src/voodoo-gen/dune
@@ -3,4 +3,13 @@
  (public_name voodoo-gen.odoc_thtml)
  (preprocess
   (pps ppx_yojson_conv))
- (libraries odoc.model odoc.document odoc.odoc omd tyxml bos yojson ppx_yojson_conv))
+ (libraries
+  odoc.model
+  odoc.document
+  odoc.odoc
+  omd
+  tyxml
+  bos
+  voodoo_lib
+  yojson
+  ppx_yojson_conv))
