--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -20,7 +20,7 @@ depends: [
   "cmdliner"
   "yojson"
   "bos"
-  "ppx_yojson_conv"
+  "ppx_yojson_conv" {= "v0.15.1"}
   "sexplib"
   "fpath"
   "ppx_deriving_yaml" {with-test}
