--- a/voodoo-prep.opam
+++ b/voodoo-prep.opam
@@ -10,6 +10,7 @@ homepage: "https://github.com/jonludlam/voodoo"
 bug-reports: "https://github.com/jonludlam/voodoo/issues"
 depends: [
   "dune" {>= "2.8"}
+  "ocaml" {>= "4.08.0"}
   "cmdliner"
   "fpath"
   "bos"
