--- a/voodoo-lib.opam
+++ b/voodoo-lib.opam
@@ -14,7 +14,7 @@ depends: [
   "astring"
   "fpath"
   "opam-format"
-  "ppx_yojson_conv"
+  "ppx_yojson_conv_lib"
   "sexplib"
   "yojson"
   "odoc" {with-doc}
