--- a/dune
+++ b/dune
@@ -1,9 +1,9 @@
 (rule
  (with-stdout-to
-  dune-project.formatted
+  dune-project.1
   (run dune format-dune-file dune-project)))
 
 (rule
  (alias fmt)
  (action
-  (diff dune-project dune-project.formatted)))
+  (diff dune-project dune-project.1)))
