CI: mark dune-project as a dependence of the fmt rule

--- a/dune
+++ b/dune
@@ -1,7 +1,7 @@
 (rule
  (with-stdout-to
   dune-project.1
-  (run dune format-dune-file dune-project)))
+  (run dune format-dune-file %{dep:dune-project})))
 
 (rule
  (alias fmt)
