Require ppx_deriving_yaml.0.2.1 for tests

--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -23,7 +23,7 @@ depends: [
   "sexplib"
   "fpath"
   "conf-jq" {with-test}
-  "ppx_deriving_yaml" {with-test}
+  "ppx_deriving_yaml" {= "0.2.1" & with-test}
   "base" {with-test}
 ]
 build: [
