--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -24,7 +24,7 @@ depends: [
   "fpath"
   "conf-jq" {with-test}
   "ppx_deriving_yaml" {= "0.2.1" & with-test}
-  "base" {with-test}
+  "base" {= "v0.15.1" & with-test}
 ]
 build: [
   ["dune" "subst"] {dev}
