--- a/src/voodoo-gen/dune
+++ b/src/voodoo-gen/dune
@@ -2,6 +2,4 @@
  (name main)
  (public_name voodoo-gen)
  (package voodoo-gen)
- (preprocess
-  (pps ppx_deriving_yojson))
- (libraries voodoo_lib odoc.odoc omd bos yojson ppx_deriving_yojson cmdliner))
+ (libraries odoc.odoc omd bos yojson cmdliner voodoo_lib))
