--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -19,7 +19,7 @@ depends: [
   "cmdliner"
   "yojson"
   "bos"
-  "ppx_yojson_conv" {= "v0.15.1"}
+  "ppx_deriving_yojson"
   "sexplib"
   "fpath"
   "conf-jq" {with-test}
