--- a/voodoo-lib.opam
+++ b/voodoo-lib.opam
@@ -13,7 +13,7 @@ depends: [
   "bos"
   "astring"
   "fpath"
-  "ppx_deriving_yojson"
+  "ppx_deriving_yojson" {>= "3.6.0"}
   "sexplib"
   "yojson"
   "odoc" {with-doc}
