--- a/src/voodoo-do/dune
+++ b/src/voodoo-do/dune
@@ -2,4 +2,4 @@
  (name main)
  (public_name voodoo-do)
  (package voodoo-do)
- (libraries voodoo-lib cmdliner))
+ (libraries bos.setup voodoo-lib cmdliner))
