--- a/src/voodoo/dune
+++ b/src/voodoo/dune
@@ -3,4 +3,4 @@
  (public_name voodoo-lib)
  (preprocess
   (pps ppx_deriving_yojson))
- (libraries astring fpath bos ppx_deriving_yojson sexplib yojson))
+ (libraries astring fpath bos bos.setup ppx_deriving_yojson sexplib yojson))
