[WIP] integrate olinkcheck

--- a/src/voodoo-gen/dune
+++ b/src/voodoo-gen/dune
@@ -4,4 +4,12 @@
  (package voodoo-gen)
  (preprocess
   (pps ppx_deriving_yojson))
- (libraries voodoo_lib odoc.odoc omd bos yojson ppx_deriving_yojson cmdliner))
+ (libraries
+  voodoo_lib
+  odoc.odoc
+  omd
+  bos
+  yojson
+  ppx_deriving_yojson
+  cmdliner
+  olinkcheck))
