use commit hash

--- a/voodoo-gen.opam.template
+++ b/voodoo-gen.opam.template
@@ -1,4 +1,4 @@
 available: [ os-distribution != "alpine" & arch != "ppc64"]
 # PPC64 fails to build with stack overflow see https://github.com/ocaml/ocaml/issues/11415
 # Alpine-3.16 doesn't have a pandoc package, however 3.17 does
-pin-depends: [["olinkcheck.~dev" "git+https://github.com/tarides/olinkcheck#main"]]
+pin-depends: [["olinkcheck.~dev" "git+https://github.com/tarides/olinkcheck#d618bb01825a3469ed7e664687436264fcc69a03"]]
