--- a/voodoo-prep.opam
+++ b/voodoo-prep.opam
@@ -13,7 +13,7 @@ depends: [
   "cmdliner"
   "fpath"
   "bos"
-  "js_of_ocaml"
+  "js_of_ocaml-compiler"
   "ocaml-base-compiler"
   "opam-format" {>= "2.0.0"}
   "yojson" {>= "1.6.0"}
