Use read_cmt/cmi functions from compiler-libs (#1)
* Use read_cmt/cmi functions from compiler-libs

Co-authored-by: Guillaume Petiot <guillaume@tarides.com>

--- a/src/voodoo-prep/dune
+++ b/src/voodoo-prep/dune
@@ -2,4 +2,4 @@
  (name main)
  (public_name voodoo-prep)
  (package voodoo-prep)
- (libraries cmdliner fpath bos opam-format))
+ (libraries cmdliner fpath bos compiler-libs.common opam-format))
