--- a/voodoo-gen.opam
+++ b/voodoo-gen.opam
@@ -12,7 +12,8 @@ depends: [
   "dune" {>= "3.0"}
   "omd" {= "2.0.0~alpha3"}
   "voodoo-lib"
-  "odoc" {>= "2.2.0"}
+  "odoc" {= "2.2.2"}
+  "odoc-parser" {= "2.0.0"}
   "conf-pandoc"
   "astring"
   "cmdliner"
